# ros2-loading_motor_dt

./: CMakeLists.txt  README.md  package.xml  parkclarke.m
config/: params.yaml
data_files/: 1k_ros_work.csv
include/data_logger/: data_logger.cpp  data_logger.hpp
install/: local_setup.sh  setup.sh
install/loading_motor_dt/share/loading_motor_dt/: package.bash  package.zsh
launch/: current_simulator_launch.py  data_processor_launch.py  efficiency_map_launch.py  loading_motor_launch.py  loading_motors_all_launch.py  rewritten_yaml.py  windings_checker_launch.py
log/: latest_build
src/angular_converter/: AngularConverter.cpp  angular_converter.cpp
src/current_simulator/: current_simulator.cpp  parse_dewetron.cpp  parse_dewetron.h
src/data_logger/: data_logger.cpp  data_logger.hpp
src/data_processor/: ParseDewetron.cpp  ParseDewetron.h  currentVoltageFlow.cpp
src/efficiency/: EfficiencyMap.cpp  efficiency_map.cpp
src/power_calculator/: PowerCalculator.cpp  power_calculator.cpp
src/torque_calculator/: TorqueCalculator.cpp  torque_calculator.cpp
src/winding_error_checker/: INSTRUCTIONS.md  winding_error_checker.cpp
src/winding_error_checker/winding_error_checker_py/scripts/: winding_error_checker.py
